--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "uikit": "^3.5.5",
     "webpack-cli": "^3.3.11",
     "webpack-stream": "^5.2.1"
   },
